log
Fri 29 Mar 2024 06:57:47 PM UTC: 
 tests:  0|6
total_score: 0/70
e296d19
Fri 29 Mar 2024 07:49:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘nuevaLista’ [-Werror=unused-variable]
   32 |   List *nuevaLista = (List *)malloc(sizeof(List));
      |         ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e4513e
Fri 29 Mar 2024 07:50:50 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
test.c: In function ‘createList’:
list.c:33:13: error: ‘*nuevaLista.head’ is used uninitialized [-Werror=uninitialized]
   33 |   nuevaLista->head->data = NULL;
      |   ~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
dee7e1b
Fri 29 Mar 2024 07:51:37 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1f08198
Fri 29 Mar 2024 11:33:35 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
f957d57
Fri 29 Mar 2024 11:35:32 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
b79f385
Fri 29 Mar 2024 11:36:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8467bbf
Fri 29 Mar 2024 11:37:55 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
821b63b
Fri 29 Mar 2024 11:38:27 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
d4b76f9
Fri 29 Mar 2024 11:40:20 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9000118
Fri 29 Mar 2024 11:40:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1d4835f
Fri 29 Mar 2024 11:40:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3e445b7
Fri 29 Mar 2024 11:41:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7c81056
Fri 29 Mar 2024 11:42:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7d5c10c
